# Ground_Game_Engine

./: README.md
Winter_Game/: CMakeLists.txt  Winter.sln  unique.txt
Winter_Game/Ground/: CMakeLists.txt  Event.cpp  Event.h  Ground.h  Ground.vcxproj  Ground.vcxproj.filters  GroundApp.cpp  GroundApp.h  GroundUtil.h  GroundWindow.cpp  GroundWindow.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
Winter_Game/Ground/GLFWcode/: GLFWwindowImplementation.cpp  GLFWwindowImplementation.h
Winter_Game/Ground/OpenGLcode/: OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Winter_Game/Ground/x64/Debug/: Ground.dll.recipe  Ground.ilk  groundapp.obj.enc  vc143.idb
Winter_Game/Ground/x64/Debug/Ground.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ground.lastbuildstate  Ground.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Winter_Game/Ground/x64/Release/: Ground.dll.recipe  Ground.iobj  Ground.ipdb
Winter_Game/Ground/x64/Release/Ground.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ground.lastbuildstate  (+4 more)
Winter_Game/Winter/: CMakeLists.txt  Winter.cpp  Winter.vcxproj  Winter.vcxproj.filters
Winter_Game/Winter/x64/Debug/: Winter.exe.recipe  Winter.ilk  vc143.idb  winter.obj.enc
Winter_Game/Winter/x64/Release/: Winter.exe.recipe  Winter.iobj  Winter.ipdb
Winter_Game/glad/: glad.vcxproj
Winter_Game/glad/include/glad/: glad.h
Winter_Game/glad/src/: glad.c
Winter_Game/stbi/: stbi.vcxproj
Winter_Game/x64/Debug/: Ground.exp  Ground.lib  glad.idb  glad.lib  stbi.idb  stbi.lib
Winter_Game/x64/Release/: Ground.exp  Ground.lib
(+24 files in other folders)
